android: fix for kid-dashbaord links alignment

--- a/app/pages/kid-dashboard/kid-dashboard.css
+++ b/app/pages/kid-dashboard/kid-dashboard.css
@@ -41,7 +41,7 @@ navigation-links-1 -> Profile details, Documents, Notes
 */
 
 .kid-dashboard .navigation-links-1 {
-    margin: 10px;
+    margin: 20 10 10 10;
 }
 
 
